Update HTML and CSS componentes of all modules

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<nav>
-  <a routerLink="/suscripcion">Suscripción a un Fondo</a> |
-  <a routerLink="/cancelacion">Cancelación de Suscripción</a> |
-  <a routerLink="/cliente">Crear Cliente</a> |
-  <a routerLink="/fondos">Ver Fondos</a> |
-  <a routerLink="/transacciones">Ver Transacciones</a>
+<nav class="navbar">
+  <a routerLink="/suscripcion" class="nav-link">Suscripción a un Fondo</a>
+  <a routerLink="/cancelacion" class="nav-link">Cancelación de Suscripción</a>
+  <a routerLink="/cliente" class="nav-link">Crear Cliente</a>
+  <a routerLink="/fondos" class="nav-link">Ver Fondos</a>
+  <a routerLink="/transacciones" class="nav-link">Ver Transacciones</a>
 </nav>
 <router-outlet></router-outlet>
