--- a/src/app/pages/fondo/fondo.component.html
+++ b/src/app/pages/fondo/fondo.component.html
@@ -1,10 +1,10 @@
-<div>
+<div class="fondo-lista-container">
   <h2>Lista de Fondos</h2>
 
-  <ul>
-    <li *ngFor="let fondo of fondos">
-      {{ fondo.nombre }} - Monto Mínimo: {{ fondo.montoMinimo | currency:'COP' }}
-    </li>
-  </ul>
+  <div class="fondo-lista">
+    <div class="fondo-tarjeta" *ngFor="let fondo of fondos">
+      <h3>{{ fondo.nombre }}</h3>
+      <p>Monto Mínimo: <span>{{ fondo.montoMinimo | currency:'COP' }}</span></p>
+    </div>
+  </div>
 </div>
-
